# ftxcoinstaker

./: .gitignore  README.md  pyproject.toml  test
src/ftxcoinstaker/: __init__.py  client.py  coinStaker.py  coinstaker.py  console.py  cs_orders_analyzer.py  cs_orders_executor.py  cs_orders_watcher.py  demo.py  ftx_client.py  main.py  myFtx.py  utils.py
src/ftxcoinstaker/config/data/: tokens.csv
src/ftxcoinstaker/config/pairs/: btc_usd.yaml  btc_usd.yaml.disabled  gods_usd.yaml
src/ftxcoinstaker/user_data/db/: btcusd  godsusd
src/ftxcoinstaker/user_data/pairs/: gods_usd.yaml
