[tool.poetry]
name = "ftxcoinstaker"
version = "0.1.0"
description = "High Frequency Trading on FTX"
authors = ["David Lehuby <david.lehuby@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
ciso8601 = "^2.2.0"
slack = "^0.0.2"
slackclient = "^2.9.3"
slack-sdk = "^3.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ftxcoinstaker = "ftxcoinstaker.console:main"
